Enable link-time code generation for release builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
 set(CMAKE_COMPILE_WARNING_AS_ERROR On)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE On)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELWITHDEBINFO On)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_MINSIZEREL On)
 
 file(GLOB_RECURSE ArkanoidSources src/*.c)
 
