--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,9 +47,10 @@ elseif(CMAKE_C_COMPILER_ID MATCHES ".*Clang.*")
     )
 endif()
 
-target_include_directories(arkanoid PUBLIC dependencies/GLFW/include)
 target_include_directories(arkanoid PUBLIC dependencies/GLAD/include)
+target_include_directories(arkanoid PUBLIC dependencies/GLFW/include)
 target_include_directories(arkanoid PUBLIC dependencies/INCBIN/include)
+target_include_directories(arkanoid PUBLIC dependencies/STB_IMAGE/include)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW lib only")
 set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
@@ -64,5 +65,7 @@ endif()
 
 add_subdirectory(dependencies/GLAD)
 add_subdirectory(dependencies/GLFW)
+add_subdirectory(dependencies/STB_IMAGE)
 target_link_libraries(arkanoid glad)
 target_link_libraries(arkanoid glfw)
+target_link_libraries(arkanoid stb_image)
