Use a quad tree to efficiently find blocks the ball can collide with
* work in progress quad tree

* Work in progress on quadTree

* Add option for rendering quad tree for debugging

* Use checked malloc in quad tree

* Refactor

* Work in progress on quad tree

* Fix compilation issues

* Rename structures.* to blocks_tree.*

* Rename back to quad_tree.* and rename QuadTree to QuadTreeNode

* Work in progress on quad tree

* Refactor and small optimizations

* Render quad tree with lines

* Print an error message when neither GLFW_BUILD_X11 nor GLFW_BUILD_WAYLAND has been specified on linux

* Refactor

* Refactor

* Add GLFW_BUILD_X11 to linux workflow cmake options

---------

Co-authored-by: Wiktor <74769437+Wikierk@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_MINSIZEREL On)
 
 file(GLOB_RECURSE ARKANOID_SOURCES src/*.c)
 
-if (CMAKE_BUILD_TYPE MATCHES "Debug")
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
     set(SUBSYSTEM "")
     add_compile_definitions(_DEBUG)
 elseif(CMAKE_BUILD_TYPE MATCHES "Release" OR CMAKE_BUILD_TYPE MATCHES "MinSizeRel" OR CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
@@ -26,7 +26,7 @@ add_executable(
     ${ARKANOID_SOURCES}
 )
 
-if (CMAKE_C_COMPILER_ID MATCHES ".*GNU.*")
+if(CMAKE_C_COMPILER_ID MATCHES ".*GNU.*")
     target_compile_options(
         arkanoid PRIVATE
         -Wall -Wextra -Werror -Wconversion -Wpedantic -Wshadow
@@ -53,11 +53,20 @@ set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW lib only")
 set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
 option(GLFW_BUILD_X11 OFF)
 option(GLFW_BUILD_WAYLAND OFF)
+option(DRAW_QUAD_TREE OFF)
+
+if(NOT WIN32 AND NOT GLFW_BUILD_X11 AND NOT GLFW_BUILD_WAYLAND)
+    message(FATAL_ERROR "You need to specify either GLFW_BUILD_X11 or GLFW_BUILD_WAYLAND on Linux")
+endif()
 
 if(GLFW_BUILD_WAYLAND)
     target_compile_definitions(arkanoid PRIVATE _GLFW_WAYLAND)
 elseif(GLFW_BUILD_X11)
     target_compile_definitions(arkanoid PRIVATE _GLFW_X11)
+endif()
+
+if(DRAW_QUAD_TREE)
+    target_compile_definitions(arkanoid PRIVATE DRAW_QUAD_TREE)
 endif()
 
 add_subdirectory(dependencies/GLAD)
